<resources>
    <string name="app_name">AnimationDemo</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="blink">Blink</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="rotate">Rotate</string>
    <string name="move">Move</string>
    <string name="bounce">Bounce</string>
</resources>

